# labscripts

./: pyproject.toml
labscripts/extract_sequences/: extract_sequences.py
labscripts/fetch_sequences/: fetch_sequences.py
labscripts/utils/: utils.py
src/labscripts.egg-info/: PKG-INFO
src/labscripts/fetch_sequences/: __main__.py  fetch_sequences.py
src/labscripts/mlst/: __main__.py  get_species_list.sh  mlst.py  mlst_cge.py  mlst_runner.py  mlst_utils.py
src/labscripts/mlst/mlst_db/abaumannii/: abaumannii.length.b  abaumannii.name  abaumannii.seq.b
src/labscripts/mlst/mlst_db/abaumannii_2/: abaumannii_2.length.b  abaumannii_2.name  abaumannii_2.seq.b
src/labscripts/mlst/mlst_db/achromobacter/: achromobacter.length.b  achromobacter.name  achromobacter.seq.b
src/labscripts/mlst/mlst_db/aeromonas/: aeromonas.length.b  aeromonas.name  aeromonas.seq.b
src/labscripts/mlst/mlst_db/afumigatus/: afumigatus.length.b  afumigatus.name  afumigatus.seq.b
src/labscripts/mlst/mlst_db/aphagocytophilum/: aphagocytophilum.length.b  aphagocytophilum.name  aphagocytophilum.seq.b
src/labscripts/mlst/mlst_db/arcobacter/: arcobacter.length.b  arcobacter.name  arcobacter.seq.b
src/labscripts/mlst/mlst_db/bbacilliformis/: bbacilliformis.length.b  bbacilliformis.name  bbacilliformis.seq.b
src/labscripts/mlst/mlst_db/bcepacia/: bcepacia.length.b  bcepacia.name  bcepacia.seq.b
src/labscripts/run_mlst/: run_mlst.py
src/labscripts/seqtyper/: __main__.py  run_mlst.py
src/mlst/: __main__.py  mlst.py
src/run_mlst/: run_mlst.py
(+551 files in other folders)
